--- a/app/src/main/res/layout/activity_user_log.xml
+++ b/app/src/main/res/layout/activity_user_log.xml
@@ -4,35 +4,41 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/blueshade1"
+    android:background="@color/purple_200"
     tools:context=".UserLog">
 
     <TextView
         android:id="@+id/textView6"
-        android:layout_width="190dp"
-        android:layout_height="52dp"
+        android:layout_width="201dp"
+        android:layout_height="46dp"
         android:fontFamily="@font/audiowide"
         android:text="User Login"
-        android:textAlignment="center"
-        android:textColor="#00DDFF"
+        android:textAlignment="viewStart"
+        android:textColor="@color/white"
         android:textSize="29sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintHorizontal_bias="0.095"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.119" />
+        app:layout_constraintVertical_bias="0.227" />
 
     <EditText
         android:id="@+id/LogEmail"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="10"
         android:hint="Email"
         android:inputType="text"
-        android:textColor="#FFFFFF"
-        android:textColorHint="#FFFFFF"
+        android:layout_width="0dp"
+        android:layout_height="55dp"
+        android:ems="10"
+        android:background="@drawable/edittext_background"
+        android:layout_marginEnd="32dp"
+        android:layout_marginTop="16sp"
+        android:layout_marginStart="20dp"
+        android:textColor="#707070"
+        android:textColorHint="#707070"
+        android:textSize="20sp"
+        android:padding="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.547"
@@ -42,28 +48,37 @@
 
     <EditText
         android:id="@+id/LogPass"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="55dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="16sp"
+        android:layout_marginEnd="32dp"
+        android:background="@drawable/edittext_background"
         android:ems="10"
         android:hint="Password"
-        android:inputType="text"
-        android:textColor="#FFFFFF"
-        android:textColorHint="#FFFFFF"
+        android:padding="16dp"
+        android:textColor="#707070"
+        android:textColorHint="#707070"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.547"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.462" />
+        app:layout_constraintVertical_bias="0.453" />
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/login"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:onClick="onClick2"
         android:text="Login"
-        android:textColor="#FFFFFF"
-        app:backgroundTint="#AA00FF"
+        android:background="@drawable/button_background"
+        android:layout_width="0dp"
+        android:layout_height="55dp"
+        android:textSize="20sp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginTop="16sp"
+        android:layout_marginStart="20dp"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -76,13 +91,15 @@
         android:layout_width="125dp"
         android:layout_height="27dp"
         android:text="Click To Register"
-        android:textAlignment="center"
+        android:textAlignment="viewStart"
         android:textColor="#FFFFFF"
+        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.069"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.703" />
+        app:layout_constraintVertical_bias="0.68" />
 
     <TextView
         android:id="@+id/ForgotPass"
@@ -91,9 +108,11 @@
         android:text="Forgot Password"
         android:textAlignment="center"
         android:textColor="#FFFFFF"
+        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.069"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.789" />
+        app:layout_constraintVertical_bias="0.741" />
 </androidx.constraintlayout.widget.ConstraintLayout>
