--- a/app/src/main/res/layout/activity_add_scheme.xml
+++ b/app/src/main/res/layout/activity_add_scheme.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/blueshade1"
+    android:background="@color/purple_200"
     tools:context=".addScheme">
 
     <ScrollView
@@ -37,19 +37,50 @@
                     android:layout_marginTop="25dp"
                     android:layout_marginRight="20dp"
                     android:padding="10dp"
-                    android:textColorHint="#FFFFFF"
+                    android:textColorHint="#707070"
+                    android:textSize="20sp"
                     app:hintTextColor="#00FFFF"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="1.0"
+                    app:layout_constraintHorizontal_bias="0.666"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.18">
+                    app:layout_constraintVertical_bias="0.617">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/inputscmurl"
+                        android:layout_width="match_parent"
+                        android:layout_height="55dp"
+                        android:background="@drawable/edittext_background"
+                        android:hint="Enter the url here.."
+                        android:padding="15dp"
+                        android:textColor="#FFFFFF"
+                        android:textSize="16sp" />
+                </com.google.android.material.textfield.TextInputLayout>
+
+                <com.google.android.material.textfield.TextInputLayout
+
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginTop="25dp"
+                    android:layout_marginRight="20dp"
+                    android:padding="10dp"
+                    android:textColorHint="#707070"
+                    android:textSize="20sp"
+                    app:hintTextColor="#00FFFF"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.666"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintVertical_bias="0.163">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/inputscmtitle"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="55dp"
+                        android:background="@drawable/edittext_background"
                         android:hint="Enter the name of Scheme"
                         android:padding="15dp"
                         android:textColor="#FFFFFF"
@@ -65,19 +96,21 @@
                     android:layout_marginTop="44dp"
                     android:layout_marginRight="20dp"
                     android:padding="10dp"
-                    android:textColorHint="#FFFFFF"
+                    android:textColorHint="#707070"
                     app:hintTextColor="#00FFFF"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.666"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.35">
-
+                    app:layout_constraintVertical_bias="0.355">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/inputscmdesc"
                         android:layout_width="match_parent"
                         android:layout_height="200dp"
+                        android:background="@drawable/edittext_background"
+                        android:gravity="top"
                         android:hint="Enter the discription here.."
                         android:padding="15dp"
                         android:textColor="#FFFFFF"
@@ -86,48 +119,21 @@
 
                 <TextView
                     android:id="@+id/textView"
-                    android:layout_width="316dp"
-                    android:layout_height="54dp"
+                    android:layout_width="318dp"
+                    android:layout_height="52dp"
                     android:layout_marginStart="-10dp"
                     android:fontFamily="@font/audiowide"
                     android:text="Add Schemes"
-                    android:textAlignment="center"
-                    android:textColor="#00DDFF"
+                    android:textAlignment="viewStart"
+                    android:textColor="@color/white"
                     android:textSize="34sp"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.542"
+                    app:layout_constraintHorizontal_bias="0.65"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.087" />
-
-
-                <com.google.android.material.textfield.TextInputLayout
-
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginTop="25dp"
-                    android:layout_marginRight="20dp"
-                    android:padding="10dp"
-                    android:textColorHint="#FFFFFF"
-                    app:hintTextColor="#00FFFF"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.619">
-
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/inputscmurl"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:hint="Enter the url of the Scheme"
-                        android:padding="15dp"
-                        android:textColor="#FFFFFF"
-                        android:textSize="16sp" />
-                </com.google.android.material.textfield.TextInputLayout>
+                    app:layout_constraintVertical_bias="0.102" />
 
                 <com.google.android.material.imageview.ShapeableImageView
                     android:id="@+id/inputscmimage"
@@ -138,44 +144,48 @@
                     android:src="@drawable/common_google_signin_btn_icon_dark_normal"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.206"
+                    app:layout_constraintHorizontal_bias="0.184"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.867"
+                    app:layout_constraintVertical_bias="0.82"
                     app:shapeAppearance="@style/roundrect"
                     app:strokeColor="@color/blueshade1"
                     app:strokeWidth="5dp"
                     tools:src="@tools:sample/avatars"
                     tools:srcCompat="@tools:sample/avatars" />
 
-                <Button
+                <androidx.appcompat.widget.AppCompatButton
                     android:id="@+id/scmimgchoosebtn"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="139dp"
+                    android:layout_height="51dp"
+                    android:background="@drawable/button_background"
                     android:text="Choose image"
+                    android:textColor="@color/white"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.805"
+                    app:layout_constraintHorizontal_bias="0.849"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.84" />
+                    app:layout_constraintVertical_bias="0.785" />
 
-                <Button
+                <androidx.appcompat.widget.AppCompatButton
                     android:id="@+id/scmsubmitbtn"
                     android:layout_width="245dp"
                     android:layout_height="54dp"
+                    android:background="@drawable/button_background"
                     android:text="Submit"
+                    android:textColor="@color/white"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.56"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.967" />
+                    app:layout_constraintVertical_bias="0.925" />
 
                 <com.google.android.material.floatingactionbutton.FloatingActionButton
                     android:id="@+id/flbuttonback"
                     android:layout_width="56dp"
                     android:layout_height="53dp"
+                    android:background="@drawable/button_background"
                     android:clickable="true"
                     app:backgroundTint="#5F54A2"
                     app:layout_constraintBottom_toBottomOf="parent"
