--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,24 +4,27 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#192533"
+    android:background="@color/purple_200"
     tools:context=".MainActivity"
     tools:ignore="ExtraText"
     tools:layout_editor_absoluteX="0dp"
     tools:layout_editor_absoluteY="53dp">
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/ctlogin"
-        android:layout_width="148dp"
+        android:layout_width="157dp"
         android:layout_height="57dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="16sp"
+        android:layout_marginEnd="32dp"
+        android:background="@drawable/button_background"
         android:onClick="ctlogin"
         android:text="LOGIN"
-        android:textColor="#FFFFFF"
-        android:textSize="16sp"
-        app:backgroundTint="#3E67CF"
+        android:textColor="@color/white"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.874"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.832" />
@@ -33,7 +36,7 @@
         android:fontFamily="@font/audiowide"
         android:text="WELCOME TO E-PANCHAYAT"
         android:textAlignment="center"
-        android:textColor="#0998AF"
+        android:textColor="@color/white"
         android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -50,25 +53,27 @@
         android:fontFamily="@font/audiowide"
         android:text="PDO"
         android:textAlignment="center"
-        android:textColor="#0998AF"
+        android:textColor="@color/white"
         android:textSize="28sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.356" />
+        app:layout_constraintVertical_bias="0.337" />
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/pdologin"
-        android:layout_width="122dp"
-        android:layout_height="56dp"
         android:onClick="ctlogin"
         android:text="LOGIN"
-        android:textColor="#FFFFFF"
-        android:textSize="16sp"
-        app:backgroundTint="#3E67CF"
+        android:layout_width="0dp"
+        android:layout_height="55dp"
+        android:textSize="20sp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginTop="16sp"
+        android:layout_marginStart="20dp"
+        android:textColor="@color/white"
+        android:background="@drawable/button_background"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -83,30 +88,33 @@
         android:fontFamily="@font/audiowide"
         android:text="CITIZENS"
         android:textAlignment="center"
-        android:textColor="#0998AF"
+        android:textColor="@color/white"
         android:textSize="28sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.686" />
+        app:layout_constraintVertical_bias="0.692" />
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/ctreg"
-        android:layout_width="139dp"
-        android:layout_height="56dp"
+        android:layout_width="158dp"
+        android:layout_height="58dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="16sp"
+        android:layout_marginEnd="32dp"
+        android:background="@drawable/button_background"
         android:onClick="ctreg"
         android:text="REGISTER"
-        android:textColor="#FFFFFF"
-        android:textSize="16sp"
-        app:backgroundTint="#3E67CF"
+        android:textColor="@color/white"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.125"
+        app:layout_constraintHorizontal_bias="0.049"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.832" />
+        app:layout_constraintVertical_bias="0.834" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
