--- a/app/src/main/res/layout/activity_userhome.xml
+++ b/app/src/main/res/layout/activity_userhome.xml
@@ -7,44 +7,56 @@
     android:background="#192533"
     tools:context=".Userhome">
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/viewmem"
-        android:layout_width="278dp"
-        android:layout_height="74dp"
+        android:layout_width="0dp"
+        android:layout_height="65dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="16sp"
+        android:layout_marginEnd="32dp"
+        android:background="@drawable/button_background"
         android:onClick="addMembers"
         android:text="View Members"
+        android:textColor="@color/white"
         android:textSize="20sp"
-        app:backgroundTint="#3E67CF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.741" />
+        app:layout_constraintVertical_bias="0.706" />
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/viewscm"
-        android:layout_width="278dp"
-        android:layout_height="74dp"
+        android:layout_width="0dp"
+        android:layout_height="65dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="16sp"
+        android:layout_marginEnd="32dp"
+        android:background="@drawable/button_background"
         android:onClick="addSchemes"
         android:text="View Schemes"
+        android:textColor="@color/white"
         android:textSize="20sp"
-        app:backgroundTint="#3E67CF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.531" />
+        app:layout_constraintVertical_bias="0.515" />
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/addcmp"
-        android:layout_width="278dp"
-        android:layout_height="74dp"
         android:onClick="viewComplaints"
         android:text="Add Complaints"
+        android:layout_width="0dp"
+        android:layout_height="65dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="16sp"
+        android:layout_marginEnd="32dp"
+        android:background="@drawable/button_background"
+        android:textColor="@color/white"
         android:textSize="20sp"
-        app:backgroundTint="#3E67CF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
@@ -54,35 +66,39 @@
 
     <TextView
         android:id="@+id/textView5"
-        android:layout_width="170dp"
-        android:layout_height="45dp"
+        android:layout_width="144dp"
+        android:layout_height="63dp"
         android:fontFamily="@font/audiowide"
         android:text="HOME"
-        android:textAlignment="center"
-        android:textColor="#304FFE"
+        android:textAlignment="viewStart"
+        android:textColor="@color/white"
         android:textSize="34sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintHorizontal_bias="0.074"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.142" />
+        app:layout_constraintVertical_bias="0.2" />
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/usrlogout"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        android:layout_marginEnd="16dp"
+        android:layout_width="133dp"
+        android:layout_height="63dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="16sp"
+        android:layout_marginEnd="32dp"
+        android:background="@drawable/button_background"
         android:text="Logout"
+        android:textColor="@color/white"
+        android:textSize="20sp"
         app:backgroundTint="#FF4747"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.526"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.017" />
+        app:layout_constraintVertical_bias="0.885" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/flbuttonback"
