--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -19,4 +19,19 @@
     <style name="CircularImageview">
         <item name="cornerSize">50%</item>
     </style>
+
+    <style name="Theme.Project1202Crypto" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+        <!-- Primary brand color. -->
+        <item name="colorPrimary">#130041</item>
+        <item name="colorPrimaryVariant">#130041</item>
+        <item name="colorOnPrimary">@color/white</item>
+        <!--Secondary brand color.-->
+        <item name="colorSecondary">@color/white</item>
+        <item name="colorSecondaryVariant">@color/teal_700</item>
+        <item name="colorOnSecondary">@color/black</item>
+        <!--Status bar color-->
+        <!--    <item name="android:statusBarColor" tools:targetApi="l">attr/colorPrimaryVariant</item>-->
+        <!-- Customize your theme here. -->
+    </style>
+
 </resources>
