--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -6,25 +6,25 @@
     android:layout_height="match_parent"
     android:background="@color/purple_200"
     tools:context=".Forgot_Password"
-    tools:layout_editor_absoluteX="0dp"
-    tools:layout_editor_absoluteY="16dp">
+    tools:layout_editor_absoluteX="6dp"
+    tools:layout_editor_absoluteY="-33dp">
 
     <TextView
         android:id="@+id/textView6"
-        android:layout_width="301dp"
-        android:layout_height="48dp"
+        android:layout_width="327dp"
+        android:layout_height="55dp"
         android:fontFamily="@font/audiowide"
         android:text="Forget Password"
         android:textAlignment="center"
-        android:textColor="@color/white"
+        android:textColor="@color/saphire"
         android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.117"
+        app:layout_constraintHorizontal_bias="0.19"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.313" />
+        app:layout_constraintVertical_bias="0.261" />
 
     <EditText
         android:id="@+id/ForgotPass"
@@ -42,10 +42,10 @@
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.418" />
+        app:layout_constraintVertical_bias="0.367" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/reset"
@@ -61,10 +61,10 @@
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.566" />
+        app:layout_constraintVertical_bias="0.516" />
 
     <TextView
         android:id="@+id/backToLogin"
@@ -72,13 +72,14 @@
         android:layout_height="27dp"
         android:text="Back To Login"
         android:textAlignment="center"
-        android:textColor="#FFFFFF"
+        android:textColor="@color/saphire"
         android:textColorHint="#FFFFFF"
         android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.09"
+        app:layout_constraintHorizontal_bias="0.055"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.678" />
+        app:layout_constraintVertical_bias="0.622" />
 </androidx.constraintlayout.widget.ConstraintLayout>
