--- a/app/src/main/res/layout/activity_user_reg.xml
+++ b/app/src/main/res/layout/activity_user_reg.xml
@@ -11,20 +11,20 @@
 
     <TextView
         android:id="@+id/textView3"
-        android:layout_width="257dp"
-        android:layout_height="79dp"
+        android:layout_width="259dp"
+        android:layout_height="68dp"
         android:fontFamily="@font/audiowide"
         android:text="User Registration"
         android:textAlignment="viewStart"
-        android:textColor="@color/white"
+        android:textColor="@color/saphire"
         android:textSize="28sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.129"
+        app:layout_constraintHorizontal_bias="0.131"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.067" />
+        app:layout_constraintVertical_bias="0.085" />
 
     <EditText
         android:id="@+id/regEmail"
@@ -157,9 +157,10 @@
         android:layout_height="22dp"
         android:text="Click here to Login"
         android:textAlignment="center"
-        android:textColor="#FFFFFF"
+        android:textColor="@color/saphire"
         android:textColorHighlight="#FFFFFF"
         android:textSize="16sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.056"
