--- a/app/src/main/res/layout/activity_view_memberlist.xml
+++ b/app/src/main/res/layout/activity_view_memberlist.xml
@@ -11,27 +11,12 @@
         android:id="@+id/memrv"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/blueshade1"
+        android:background="@color/purple_200"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
-
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/flbuttonback"
-        android:layout_width="56dp"
-        android:layout_height="53dp"
-        android:clickable="true"
-        app:backgroundTint="#5F54A2"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.044"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.039"
-        app:rippleColor="#FF0000"
-        app:srcCompat="@drawable/backbutton" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
