--- a/app/src/main/res/layout/activity_add_scheme.xml
+++ b/app/src/main/res/layout/activity_add_scheme.xml
@@ -25,8 +25,7 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/constraintl"
                 android:layout_width="match_parent"
-                android:layout_height="843dp"
-                android:paddingLeft="20dp">
+                android:layout_height="843dp">
 
 
                 <com.google.android.material.textfield.TextInputLayout
@@ -58,6 +57,7 @@
                         android:textSize="16sp" />
                 </com.google.android.material.textfield.TextInputLayout>
 
+
                 <com.google.android.material.textfield.TextInputLayout
 
                     android:layout_width="match_parent"
@@ -71,10 +71,9 @@
                     app:hintTextColor="#00FFFF"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.666"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.163">
+                    app:layout_constraintVertical_bias="0.155">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/inputscmtitle"
@@ -86,7 +85,6 @@
                         android:textColor="#FFFFFF"
                         android:textSize="16sp" />
                 </com.google.android.material.textfield.TextInputLayout>
-
 
                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/genderlayout"
@@ -125,15 +123,15 @@
                     android:fontFamily="@font/audiowide"
                     android:text="Add Schemes"
                     android:textAlignment="viewStart"
-                    android:textColor="@color/white"
+                    android:textColor="@color/saphire"
                     android:textSize="34sp"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.65"
+                    app:layout_constraintHorizontal_bias="0.291"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.102" />
+                    app:layout_constraintVertical_bias="0.07" />
 
                 <com.google.android.material.imageview.ShapeableImageView
                     android:id="@+id/inputscmimage"
@@ -180,22 +178,6 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintVertical_bias="0.925" />
-
-                <com.google.android.material.floatingactionbutton.FloatingActionButton
-                    android:id="@+id/flbuttonback"
-                    android:layout_width="56dp"
-                    android:layout_height="53dp"
-                    android:background="@drawable/button_background"
-                    android:clickable="true"
-                    app:backgroundTint="#5F54A2"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.0"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.02"
-                    app:rippleColor="#FF0000"
-                    app:srcCompat="@drawable/backbutton" />
 
 
             </androidx.constraintlayout.widget.ConstraintLayout>
