--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -28,14 +28,14 @@
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/addscm"
-        android:onClick="addSchemes"
-        android:text="Add Schemes"
         android:layout_width="0dp"
         android:layout_height="65dp"
         android:layout_marginStart="20dp"
         android:layout_marginTop="16sp"
         android:layout_marginEnd="32dp"
         android:background="@drawable/button_background"
+        android:onClick="addSchemes"
+        android:text="Add Schemes"
         android:textColor="@color/white"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -65,26 +65,9 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.286" />
 
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="132dp"
-        android:layout_height="50dp"
-        android:fontFamily="@font/audiowide"
-        android:text="HOME"
-        android:textAlignment="center"
-        android:textColor="@color/white"
-        android:textSize="34sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.155" />
-
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/admlogout"
-        android:layout_width="161dp"
+        android:layout_width="128dp"
         android:layout_height="64dp"
         android:layout_marginStart="20dp"
         android:layout_marginTop="16sp"
@@ -96,24 +79,21 @@
         app:backgroundTint="#FF4D4D"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.49"
+        app:layout_constraintHorizontal_bias="0.528"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.92" />
+        app:layout_constraintVertical_bias="0.903" />
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/flbuttonback"
-        android:layout_width="56dp"
-        android:layout_height="53dp"
-        android:clickable="true"
-        app:backgroundTint="#5F54A2"
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="126dp"
+        android:layout_height="119dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.044"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.039"
-        app:rippleColor="#FF0000"
-        app:srcCompat="@drawable/backbutton" />
+        app:layout_constraintVertical_bias="0.058"
+        app:srcCompat="@drawable/logo" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
