--- a/app/src/main/res/layout/activity_userhome.xml
+++ b/app/src/main/res/layout/activity_userhome.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#192533"
+    android:background="@color/purple_200"
     tools:context=".Userhome">
 
     <androidx.appcompat.widget.AppCompatButton
@@ -21,10 +21,10 @@
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.706" />
+        app:layout_constraintVertical_bias="0.641" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/viewscm"
@@ -40,46 +40,29 @@
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.515" />
+        app:layout_constraintVertical_bias="0.463" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/addcmp"
-        android:onClick="viewComplaints"
-        android:text="Add Complaints"
         android:layout_width="0dp"
         android:layout_height="65dp"
         android:layout_marginStart="20dp"
         android:layout_marginTop="16sp"
         android:layout_marginEnd="32dp"
         android:background="@drawable/button_background"
+        android:onClick="viewComplaints"
+        android:text="Add Complaints"
         android:textColor="@color/white"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.322" />
-
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="144dp"
-        android:layout_height="63dp"
-        android:fontFamily="@font/audiowide"
-        android:text="HOME"
-        android:textAlignment="viewStart"
-        android:textColor="@color/white"
-        android:textSize="34sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.074"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.2" />
+        app:layout_constraintVertical_bias="0.29" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/usrlogout"
@@ -98,21 +81,18 @@
         app:layout_constraintHorizontal_bias="0.526"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.885" />
+        app:layout_constraintVertical_bias="0.826" />
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/flbuttonback"
-        android:layout_width="56dp"
-        android:layout_height="53dp"
-        android:clickable="true"
-        app:backgroundTint="#5F54A2"
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="170dp"
+        android:layout_height="131dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.044"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.039"
-        app:rippleColor="#FF0000"
-        app:srcCompat="@drawable/backbutton" />
+        app:layout_constraintVertical_bias="0.08"
+        app:srcCompat="@drawable/logo" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
