--- a/app/src/main/res/layout/membersmodel.xml
+++ b/app/src/main/res/layout/membersmodel.xml
@@ -14,7 +14,7 @@
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="#356A7A"
+        android:background="@color/grey"
         android:paddingLeft="25dp"
         android:paddingTop="10dp"
         android:paddingRight="15dp"
