--- a/app/src/main/res/layout/viewcomplaintmodel.xml
+++ b/app/src/main/res/layout/viewcomplaintmodel.xml
@@ -17,7 +17,7 @@
         android:id="@+id/cardview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#356A7A"
+        android:background="@color/grey"
         android:paddingLeft="25dp"
         android:paddingTop="10dp"
         android:paddingRight="0dp"
@@ -87,24 +87,24 @@
             android:textSize="18sp"
             android:textStyle="bold" />
 
-<!--        <com.google.android.material.floatingactionbutton.FloatingActionButton-->
-<!--            android:id="@+id/seencmpbtn"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_alignParentStart="true"-->
-<!--            android:layout_alignParentTop="true"-->
-<!--            android:layout_marginStart="280dp"-->
-<!--            android:layout_marginTop="120dp"-->
+        <!--        <com.google.android.material.floatingactionbutton.FloatingActionButton-->
+        <!--            android:id="@+id/seencmpbtn"-->
+        <!--            android:layout_width="wrap_content"-->
+        <!--            android:layout_height="wrap_content"-->
+        <!--            android:layout_alignParentStart="true"-->
+        <!--            android:layout_alignParentTop="true"-->
+        <!--            android:layout_marginStart="280dp"-->
+        <!--            android:layout_marginTop="120dp"-->
 
-<!--            android:clickable="true"-->
-<!--            app:backgroundTint="#64DD17"-->
-<!--            app:layout_constraintBottom_toBottomOf="parent"-->
-<!--            app:layout_constraintEnd_toEndOf="parent"-->
-<!--            app:layout_constraintHorizontal_bias="0.828"-->
-<!--            app:layout_constraintStart_toStartOf="parent"-->
-<!--            app:layout_constraintTop_toTopOf="parent"-->
-<!--            app:layout_constraintVertical_bias="0.918"-->
-<!--            app:srcCompat="@drawable/seen" />-->
+        <!--            android:clickable="true"-->
+        <!--            app:backgroundTint="#64DD17"-->
+        <!--            app:layout_constraintBottom_toBottomOf="parent"-->
+        <!--            app:layout_constraintEnd_toEndOf="parent"-->
+        <!--            app:layout_constraintHorizontal_bias="0.828"-->
+        <!--            app:layout_constraintStart_toStartOf="parent"-->
+        <!--            app:layout_constraintTop_toTopOf="parent"-->
+        <!--            app:layout_constraintVertical_bias="0.918"-->
+        <!--            app:srcCompat="@drawable/seen" />-->
 
 
         <TextView
